Rotate a tad more

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.12/paper-full.min.js"></script>
+<script type="text/javascript" src="paper-full.min.js"></script>
 <script type="text/paperscript" src="ellsworth.js" canvas="ellsworthCanvas"></script>
 </head>
 <body>
