Index with both graphics

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src="paper-full.min.js"></script>
+<!--<script type="text/javascript" src="paper-full.min.js"></script> -->
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.18/paper-full.min.js"></script>
 <script type="text/paperscript" src="ellsworth.js" canvas="ellsworthCanvas"></script>
+<script type="text/paperscript" src="beat-alex_liberman.js" canvas="libermanCanvas"></script>
 </head>
 <body>
+<canvas id="libermanCanvas" resize></canvas>
 <canvas id="ellsworthCanvas" resize></canvas>
 </body>
 </html>
