--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 <script type="text/paperscript" src="beat-alex_liberman.js" canvas="libermanCanvas"></script>
 </head>
 <body>
-<canvas id="libermanCanvas" resize></canvas>
-<canvas id="ellsworthCanvas" resize></canvas>
+  <div>
+    <h1>Ellsworth Kelly</h1>
+    <canvas id="libermanCanvas" style="height:500px"></canvas>
+  </div>
+  <div>
+    <h1>Alex Liberman</h1>
+    <canvas id="ellsworthCanvas" style="height:800px"></canvas>
+  </div>
 </body>
 </html>
