Some text and layout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
 <script type="text/paperscript" src="beat-alex_liberman.js" canvas="libermanCanvas"></script>
 </head>
 <body>
-<canvas id="libermanCanvas" resize></canvas>
-<canvas id="ellsworthCanvas" resize></canvas>
+<div>
+  <div>
+    <canvas id="libermanCanvas" width="500px" height="500px"/>
+  </div>
+  <p><a href="https://www.wikiart.org/en/alexander-liberman/beat-1952">Beat by Alexander Liberman (1952)</a> - click!</p>
+</div>
+<div>
+  <div>
+    <canvas id="ellsworthCanvas" width="800px" height="800px"/>
+  </div>
+  <p><a href="https://www.wikiart.org/en/ellsworth-kelly/colors-for-a-large-wall-1951">Colors For A Large Wall by Ellsworth Kelly (1951)</a> - click!</p>
+</div>
 </body>
 </html>
